src/tests/functionality/assignment_2_types_variables/valid/03_mandatory_basic_pointers_address_deref.c
int main() {
    int x = 7;
    int* p = &x;
    int y = *p;

    return y;
}
