src/tests/functionality/assignment_2_types_variables/invalid_semantic/06_mandatory_address_of_literal.c
int main() {
    int* p = &5;
    return 0;
}
